@@ -1,120 +1,0 @@
-Yoshimi can now run as an LV2 plugin
-
-Supported features:
-1. Sample-accurate midi timing.
-2. State save/restore support via LV2_State_Interface.
-3. Working UI support via LV2_External_UI_Widget.
-4. Programs interface support via LV2_Programs_Interface.
-5. Multi channel audio output. 'outl' and 'outr' have lv2 index 2 and 3. All individual ports numbers start at 4.
-
-Planned features:
-
-2. Controls automation support. This will be a part of a common controls interface.
-
-###
-
-Bank root dirs are better identified, with IDs that can be changed by the user in the GUI. This is also made available for selecting over MIDI.
-
-MIDI only sees banks in the *current* root dir, but all banks are accessible to the GUI.
-
-More details in Banks.txt
-
-###
-
-Sensitivity to MIDI volume change (CC7) is now variable in 'Controllers' in the same way as pan width etc. Numeric range is 64 to 127, the default at 96 gives the same sensitivity as before at -12dB relative to the GUI controls. 127 gives 0dB and 64 gives -26dB
-
-###
-
-Yoshimi now stamps instrument and patch set XML files with its own major and minor version numbers so it is possible to tell which version created the files, or whether they were created by ZynAddSubFX.
-
-###
-
-It is now possible to direct messages to either stderr or the report window on the fly. If you chose stderr the Reports button is greyed out.
-
-###
-
-Some NRPNs are now supported.
-See:
-Using_NRPNs.txt
-Direct_Part_Control.txt
-Vector_Control.txt
-Yoshi_Zyn_NRPNs.txt
-
-###
-
-You can now use the mouse scroll wheel to adjust rotary controls. Holding down 'ctrl' gives to finer adjustment.
-Also, horizontal as well as vertical mouse movement will adjust the knob.
-
-###
-
-Part editing windows carry the part number and voice name in the title bar. For the AddSynth oscillator window this also includes the voice number.
-
-###
-
-Yoshimi now has up to 64 parts in blocks of 16. You can now decide how many you want to have available using the spinbox alongside the channel number. You can have 16, 32 or 64.
-
-By default, all the upper parts are mapped to the same MIDI channel numbers as the lowest ones but have independent voice and patch set values. They can not normally receive independent note or control messages. However, vector control will intelligently work with however many you have set, as will all the NRPN direct part controls.
-
-###
-
-When opening an instrument bank you can now tell exactly which synth engines are used by each instrument. This is represented by three pale background colours:
-
-Red -> AddSynth
-Blue -> SubSynth
-Green -> PadSynth
-
-If the instruments are kits they scanned to find out if *any* member of the kit contains each engine.
-
-This is duplicated in the current part, the mixer panel for the currently loaded instruments, and in the Instrument Edit window the same colours highlight the engine names when they are enabled with the check boxes. 
-
-###
-
-NRPNs have been extended so that via MIDI you can read most of the dynamic system settings (to the Log file). These can now also be set.
-
-###
-
-It is now possible to set up a new bank root path when starting from the command line. This takes the form:
-
-yoshimi -D /home/{username}/{directory}/{subdirectory}/bank
-
-Yoshimi will then immediately scan this path for new banks, but won't make the root (or any of its banks) current. The final directory doesn't in fact have to be 'banks' but traditionally we have always done this.
-
-Also, when running from the command line there is now access to many of the system and Root, Bank etc. settings.
-
-###
-
-Yoshimi now remembers where major windows were last placed (per instance), and if any were left open at shutdown, they will be reopened at the same location on the next run.
-
-###
-
-We have an implimentation of CC2 - breath control. This combines volume with filter cutoff.
-
-###
-
-To help when things don't seem to go right, you can now show 'raw' incoming CCs. This is enabled from the 'MIDI' tab in 'Settings'. These are the values before Yoshimi does any processing.
-
-###
-
-The earlier experimantal per part random detune features has now been formalised with a slider covering the range from 0 to +/- 50 cents, which is half-way between adjacent notes on the even tempered scale. This setting is now saved in patch sets so will be restored when you reload the same set.
-
-###
-
-Thanks to the Zyn. devs, we now have pink as well as white noise available on Addsynth voices. Pink noise sounds 'softer'.
-
-###
-
-The preferred jack/alsa MIDI and audio connections are no longer fixed at compile time. There are now checkboxes on 'Settings' to change them.
-
-###
-
-With the latest 'depop' port from Zyn, we are now fully compatibly with all instrument files.
-
-###
-
-Yoshimi will now always start even if the audio/midi backend called for doesn't exist. In this situation it will try all combinations in the order jack, alsa, null. This enables you to then change the settings and try again.
-
-You also have the ability to set 'preferred' startup alsa/jack/ midi & audio devices. these will be remembered on the next run.
-
-###
-
-As we now do a fairly detailed features list for all releases, this file will not be updated any more.
